--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>Backup plugin</name>
     <url>http://wiki.hudson-ci.org/display/HUDSON/Backup+Plugin</url>
     <description>Backups and restores Hudson/Jenkins files</description>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
 
     <developers>
         <developer>
